# src/api/ambulance-wl/models/WaitingListEntry.ts
@@ -16,10 +16,10 @@
 import { exists, mapValues } from '../runtime';
 import type { Condition } from './Condition';
 import {
-    ConditionFromJSON,
+  ConditionFromJSON,
 // @ts-ignore
-    ConditionFromJSONTyped,
-    ConditionToJSON,
+  ConditionFromJSONTyped,
+  ConditionToJSON,
 } from './Condition';
 
 /**
@@ -28,100 +28,100 @@ import {
  * @interface WaitingListEntry
  */
 export interface WaitingListEntry {
-    /**
-     * Unique id of the entry in this waiting list
-     * @type {string}
-     * @memberof WaitingListEntry
-     */
-    id: string;
-    /**
-     * Name of patient in waiting list
-     * @type {string}
-     * @memberof WaitingListEntry
-     */
-    name?: string;
-    /**
-     * Unique identifier of the patient known to Web-In-Cloud system
-     * @type {string}
-     * @memberof WaitingListEntry
-     */
-    patientId: string;
-    /**
-     * Timestamp since when the patient entered the waiting list
-     * @type {Date}
-     * @memberof WaitingListEntry
-     */
-    waitingSince: Date;
-    /**
-     * Estimated time of entering ambulance. Ignored on post.
-     * @type {Date}
-     * @memberof WaitingListEntry
-     */
-    estimatedStart?: Date;
-    /**
-     * Estimated duration of ambulance visit. If not provided then it will be computed based on condition and ambulance settings
-     * @type {number}
-     * @memberof WaitingListEntry
-     */
-    estimatedDurationMinutes: number;
-    /**
-     *
-     * @type {Condition}
-     * @memberof WaitingListEntry
-     */
-    condition?: Condition;
+  /**
+   * Unique id of the entry in this waiting list
+   * @type {string}
+   * @memberof WaitingListEntry
+   */
+  id: string;
+  /**
+   * Name of patient in waiting list
+   * @type {string}
+   * @memberof WaitingListEntry
+   */
+  name?: string;
+  /**
+   * Unique identifier of the patient known to Web-In-Cloud system
+   * @type {string}
+   * @memberof WaitingListEntry
+   */
+  patientId: string;
+  /**
+   * Timestamp since when the patient entered the waiting list
+   * @type {Date}
+   * @memberof WaitingListEntry
+   */
+  waitingSince: Date;
+  /**
+   * Estimated time of entering ambulance. Ignored on post.
+   * @type {Date}
+   * @memberof WaitingListEntry
+   */
+  estimatedStart?: Date;
+  /**
+   * Estimated duration of ambulance visit. If not provided then it will be computed based on condition and ambulance settings
+   * @type {number}
+   * @memberof WaitingListEntry
+   */
+  estimatedDurationMinutes: number;
+  /**
+   *
+   * @type {Condition}
+   * @memberof WaitingListEntry
+   */
+  condition?: Condition;
 }
 
 /**
  * Check if a given object implements the WaitingListEntry interface.
  */
 export function instanceOfWaitingListEntry(value: object): boolean {
-    let isInstance = true;
-    isInstance = isInstance && "id" in value;
-    isInstance = isInstance && "patientId" in value;
-    isInstance = isInstance && "waitingSince" in value;
-    isInstance = isInstance && "estimatedDurationMinutes" in value;
+  let isInstance = true;
+  isInstance = isInstance && 'id' in value;
+  isInstance = isInstance && 'patientId' in value;
+  isInstance = isInstance && 'waitingSince' in value;
+  isInstance = isInstance && 'estimatedDurationMinutes' in value;
 
-    return isInstance;
+  return isInstance;
 }
 
 export function WaitingListEntryFromJSON(json: any): WaitingListEntry {
-    return WaitingListEntryFromJSONTyped(json, false);
+  return WaitingListEntryFromJSONTyped(json, false);
 }
 
 // @ts-ignore
 export function WaitingListEntryFromJSONTyped(json: any, ignoreDiscriminator: boolean): WaitingListEntry {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
+  if ((json === undefined) || (json === null)) {
+    return json;
+  }
+  return {
 
-        'id': json['id'],
-        'name': !exists(json, 'name') ? undefined : json['name'],
-        'patientId': json['patientId'],
-        'waitingSince': (new Date(json['waitingSince'])),
-        'estimatedStart': !exists(json, 'estimatedStart') ? undefined : (new Date(json['estimatedStart'])),
-        'estimatedDurationMinutes': json['estimatedDurationMinutes'],
-        'condition': !exists(json, 'condition') ? undefined : ConditionFromJSON(json['condition']),
-    };
+    'id': json['id'],
+    'name': !exists(json, 'name') ? undefined : json['name'],
+    'patientId': json['patientId'],
+    'waitingSince': (new Date(json['waitingSince'])),
+    'estimatedStart': !exists(json, 'estimatedStart') ? undefined : (new Date(json['estimatedStart'])),
+    'estimatedDurationMinutes': json['estimatedDurationMinutes'],
+    'condition': !exists(json, 'condition') ? undefined : ConditionFromJSON(json['condition']),
+  };
 }
 
 export function WaitingListEntryToJSON(value?: WaitingListEntry | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
+  if (value === undefined) {
+    return undefined;
+  }
+  if (value === null) {
+    return null;
+  }
+  return {
 
-        'id': value.id,
-        'name': value.name,
-        'patientId': value.patientId,
-        'waitingSince': (value.waitingSince.toISOString()),
-        'estimatedStart': value.estimatedStart === undefined ? undefined : (value.estimatedStart.toISOString()),
-        'estimatedDurationMinutes': value.estimatedDurationMinutes,
-        'condition': ConditionToJSON(value.condition),
-    };
+    'id': value.id,
+    'name': value.name,
+    'patientId': value.patientId,
+    'waitingSince': (value.waitingSince.toISOString()),
+    'estimatedStart': value.estimatedStart === undefined ? undefined : (value.estimatedStart.toISOString()),
+    'estimatedDurationMinutes': value.estimatedDurationMinutes,
+    'condition': ConditionToJSON(value.condition),
+  };
 }
 
